--- a/pom.xml
+++ b/pom.xml
@@ -59,9 +59,15 @@
     </dependency>
 
     <dependency>
-      <groupId>org.webjars.bower</groupId>
-      <artifactId>jquery</artifactId>
-      <version>3.3.1</version>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>4.3.19.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+      <version>4.3.19.RELEASE</version>
     </dependency>
 
   </dependencies>
