--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
       <version>4.3.19.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.5.3</version>
+    </dependency>
+
   </dependencies>
 
   <build>
